# webDggrid

./: .eslintrc.cjs  .gitignore  .gitmodules  .pnp.cjs  CHANGELOG.md  CMakeLists.txt  COORDINATE_TRANSFORMS_SUMMARY.md  IMPLEMENTATION_SUMMARY.md  Make.js  Makefile  a.out.js  a.out.wasm  custom_shell.html  index.js  jest.config.mjs  out.html  out.js  out.wasm  package-lock.json  package.json  readme.md  rollup.config.js  ts.config.json  tsconfig.json  tsconfig.tsbuildinfo  typedoc.json  update_from_upstream.sh
.github/workflows/: ci.yml  deploy-docs.yml  deploy.yml  main.yml  pr-check.yml  publish.yml  release-please.yml
__tests__/: main.test.ts
copy_to_src/: dglib.cpp  func_gen.py  test.1cpp  test.cpp  webdggrid.cpp
dggrid_src/: dglib.cpp  safileio.c  test.cpp
docs/: README.md  _navbar.md  address-types.md  authalic.md  contributing.md  coordinate-transformations.md  demo.md  examples.md  geometry-notes.md  getting-started.md  hierarchical-address-implementation.md  hierarchical-addresses.md  hierarchical-operations.md  igeo7.md  index-arithmetic.md  index.html  index.md  multi-aperture.md
docs/.vitepress/: config.ts
docs/.vitepress/cache/deps_temp_d877a752/: vitepress___@vue_devtools-api.js  vitepress___@vueuse_core.js
docs/.vitepress/theme/: index.ts
docs/.vitepress/theme/components/: AuthalicDemo.vue  DggsAddressTypesDemo.vue  DggsD3Globe.vue  DggsD3HierarchyDemo.vue  DggsGlobe.vue  DggsHeroBackground.vue  Igeo7Demo.vue
docs/.vitepress/theme/utils/: globeUtils.js  loadWebdggrid.js
docs/api/: globals.md  index.md  typedoc-sidebar.json
docs/api/_media/: CHANGELOG.md
docs/api/classes/: Webdggrid.md
docs/api/enumerations/: Projection.md  Topology.md
docs/api/functions/: unwrapAntimeridianRing.md
docs/api/interfaces/: Coordinate.md  IDGGSProps.md  Vertex2DDCoordinate.md
docs/api/type-aliases/: DGGSGeoJsonProperty.md
docs/public/: example.html
example/: ex.html
examples/: cesium-pole-test.html  coordinate-transforms-example.mjs  multi-aperture-example.mjs
lib-esm/: extract.js  extract.js.map  index.js  index.js.map  libdggrid.wasm.js  webdggrid.js  webdggrid.js.map
lib-wasm/: CMakeCache.txt  Makefile  cmake_install.cmake  libdggrid.js  libdggrid.wasm
lib-wasm-py/: CMakeCache.txt  Makefile  cmake_install.cmake  libdggrid.html  libdggrid.js  libdggrid.wasm
src/: DgConstants.h  index.d.ts  index.ts  test.cpp
src-cpp/: DgBase.h  dggrid_transform.cpp  dggrid_transform.hpp  igeo7_bindings.cpp  shapefil.h  test.cpp  webdggrid.cpp
src-ts/: extract.ts  index copy.tsj  index.ts  webdggrid.ts  webdggrid.ts.bak
test/: test.spec.js
test/unit/: geo.test.ts
tests/unit/: coordinate-transforms.test.ts  geo.test.ts  hierarchical-addresses.test.ts  hierarchy.test.ts  igeo7-authalic.test.ts  igeo7.test.ts  index-digits.test.ts  multi-aperture.test.ts  polar-cell-trace.test.ts  transforms.test.ts
types/: extract.d.ts  extract.d.ts.map  index.d.ts  index.d.ts.map  webdggrid.d.ts  webdggrid.d.ts.map
utils/: Make.js  purge-jsdelivr.js  sfx-wasm.js  smoke-test.mjs  update_from_upstream.sh
wasm_dist/: webdggrid.js  webdggrid.wasm
